# confee

./: .gitignore  ADVANCED.md  CHANGELOG.md  README.ko.md  README.md  comparison.ko.md  comparison.md  development.ko.md  developments.md  pyproject.toml  readme.ko.md  readme.md  ruff.toml
.github/workflows/: publish.yml  tests.yml
src/confee/: __init__.py  async_loader.py  config.py  error_formatter.py  help_formatter.py  loaders.py  overrides.py  parser.py  plugins.py  schema.py
tests/: __init__.py  test_advanced_features.py  test_config.py  test_loaders.py  test_overrides.py  test_parser.py  test_secrets.py  test_verbosity_and_help.py  test_verbosity_matrix_extended.py
