[build-system]
requires = ["setuptools>=65.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "confee"
version = "0.0.dev"  # Auto-updated by GitHub Actions when tag is pushed
description = "Configuration Enhanced & Easy ☕️ - A Hydra-like configuration parser helper package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "JunSeok Kim", email = "infend@gmail.com"}
]
keywords = ["configuration", "config", "parser", "hydra", "pydantic", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
cli = ["typer>=0.9.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/bestend/confee"
Documentation = "https://github.com/bestend/confee#readme"
Repository = "https://github.com/bestend/confee.git"
Issues = "https://github.com/bestend/confee/issues"

[tool.setuptools]
packages = ["confee"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
confee = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=confee --cov-report=term-missing"
